overlap bug fix

--- a/front/src/components/collapse.css
+++ b/front/src/components/collapse.css
@@ -19,3 +19,8 @@ div.custom {
 .ant-collapse-borderless {
   background-color: white;
 }
+
+.highlighted {
+  background-color: yellow;
+  text-decoration: underline;
+}
